# complex-systems

./: .gitignore  README.md  pyproject.toml
good_evil_model/: main.py  notes.md  pde_test.py  title.py
graph_automaton/: .gitignore  gifs.py  graph_generator.py  layout_generator.py  main.ipynb  simulation.py
lab01/: main.py  notes.md
lab01/src/: giftools.py  numerics.py  schedule.py
lab02/: experiment1.py  experiment2.py  experiment3.py  notes.md
proj01/src/: hypoxia.py  params.py
proj02/: experiment2.py  notes.md
proj03/: .gitignore  main.ipynb  notes.md
radiation_model/: main.py
radiation_model/src/: params.py  simulation.py  viz.py
text_generation_analysis/: main (1).html  main (1).ipynb  main.ipynb
