[project]
name = "complex-systems"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "salib>=1.5.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
